--- a/jumbotron-narrow.css
+++ b/jumbotron-narrow.css
@@ -1,7 +1,7 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 @font-face {
     font-family: calli;
@@ -13,6 +13,37 @@ body {
     font-family: rale;
     src: url(raleway.light.ttf);
 }
+
+
+
+
+#titelpagina{
+    font: rale;
+    font-size: 25px;
+    }
+#lead{
+    font: rale;
+    font-size:20px;
+    }
+ #subhead {
+    font-size:18px;
+    font:rale;
+    }
+ #subtekst {
+    font-size:15px;
+    font:rale;
+    }
+ #infotekst {
+    font-size:15px;
+    font:rale;
+    color:#F1F8FA;
+    background-color:#CFE0E3;
+    padding:3px;
+}
+#listtitel{
+    color:#269abc;
+    }
+    
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -57,6 +88,11 @@ body {
   text-align: center;
   border-bottom: 1px solid #CFE0E3;
   font-family: rale;
+  background-image: url('bluewood.jpg');
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-size: cover;
+  
 }
 .jumbotron .btn {
   padding: 14px 24px;
